Add Anpotowin Jensen's photo and update speaker details for FYP Event 2025

--- a/index.html
+++ b/index.html
@@ -1157,11 +1157,8 @@
                 <p class="hero-subtitle">Taking Action for Youth Mental Health</p>
                 
                 <div class="hero-cta">
-                    <a href="https://www.foryoupage.org/2025Registration" class="btn btn-primary" target="_blank">
-                        Register Now
-                    </a>
                     <a href="https://www.foryoupage.org/2025JoinNow" class="btn btn-secondary" target="_blank">
-                        Join Event
+                        Join Event via Zoom
                     </a>
                 </div>
 
@@ -1230,10 +1227,10 @@
                 </div>
 
                 <div class="speaker-card glass-card" 
-                     onclick="openModal('anpotowin-jensen', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Anpotowin%20Jensen.jpg', 'ANPOTOWIN JENSEN', 'Youth Advocate & Community Organizer', 'Anpotowin Jensen is a passionate youth advocate and community organizer dedicated to amplifying youth voices in mental health policy and practice. Their work focuses on grassroots organizing and community-based solutions.')">
-                    <div class="speaker-avatar" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Anpotowin%20Jensen.jpg');"></div>
-                    <h4 class="speaker-name">ANPOTOWIN JENSEN</h4>
-                    <p class="speaker-title">Youth Advocate & Community Organizer</p>
+                     onclick="openModal('anpotowin-jensen', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/ANPOTOWIN%20JENSEN.jpeg', 'ANPOTOWIN JENSEN (she/her)', 'Environmental Systems Engineer & Indigenous Advocate', 'Anpo was born and raised on the Pine Ridge Reservation in South Dakota, and earned her B.S in Environmental Systems Engineering and her M.S in Civil and Environmental Engineering from Stanford University, where she was the first Native woman on Stanford\'s Student Global Health Board. As a writer, author, and poet, she interweaves her experiences as an Oglala woman, engineer, tribal college adjunct instructor and advocate for Indigenous solutions in global health & climate change in her creations.&lt;br&gt;&lt;br&gt;Some of her advocacy roles have included being an Environmental Health Specialist for the International Indian Treaty Council, a youth representative of the Black Hills Sioux Nation Council, and North American Focal Point of the UN Global Indigenous Youth Caucus. In these capacities, she has delivered testimony on the United Nations floor that led to formal policy recommendations on Indigenous languages & health from the UN Permanent Forum on Indigenous Issues to the World Health Organization (WHO). Additionally, she was nominated and selected to serve on the first Youth cohort at the International Conference on Chemicals and Waste Management in Bonn, Germany.&lt;br&gt;&lt;br&gt;Her work has been featured in & by Forbes Magazine, the Native American 40 under 40 list, Scope, Grist, the UN Youth Envoy, the Oxford Climate Review, The Lancet, Stanford\'s Center for Innovation in Global Health, the Journal of Climate Change and Health, and more.')">
+                    <div class="speaker-avatar" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/ANPOTOWIN%20JENSEN.jpeg');"></div>
+                    <h4 class="speaker-name">ANPOTOWIN JENSEN (she/her)</h4>
+                    <p class="speaker-title">Environmental Systems Engineer & Indigenous Advocate</p>
                     <p class="speaker-bio">UN Science Summit Panelist</p>
                 </div>
             </div>
@@ -1300,9 +1297,9 @@
                 </div>
 
                 <div class="speaker-card glass-card" 
-                     onclick="openModal('sean-thum', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Dr.%20Sean%20Thum%20(Medical%20Doctor%20%26%20Policy%20Officer,%20Malaysian%20Health%20Coalition).jfif', 'DR. SEAN THUM', 'Medical Doctor & Policy Officer, Malaysian Health Coalition', 'Dr. Sean Thum is a Medical Doctor and Policy Officer at the Malaysian Health Coalition. He contributes to the Mental Health Equity breakout session, bringing expertise in health policy and ensuring digital mental health tools bridge rather than widen equity gaps.')">
+                     onclick="openModal('sean-thum', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Dr.%20Sean%20Thum%20(Medical%20Doctor%20%26%20Policy%20Officer,%20Malaysian%20Health%20Coalition).jfif', 'DR. SEAN THUM (he/him)', 'Medical Doctor & Policy Officer, Malaysian Health Coalition', 'Dr Sean Thum is a medical doctor with training in mental and public health whose career bridges healthcare, policy, and technology. He currently serves as Special Functions Officer to the Deputy Minister of Communications, where his work focuses on the intersection of health policy, digital connectivity, and societal wellbeing.&lt;br&gt;&lt;br&gt;Beyond government service, Sean is an elected senior leader in the Malaysian Medical Association, where he actively champions doctors\' welfare and advocates for structural healthcare reform. He also sits on the Board of Visitors of Hospital Shah Alam, contributing to community-based oversight of public healthcare facilities.&lt;br&gt;&lt;br&gt;A prolific writer and commentator, Sean is a columnist for two Malaysian Mandarin-language newspapers and regularly publishes essays on health, technology, and governance. His thought leadership extends into youth engagement where he co-founded Vokal Sejiwa, a non-governmental organisation that amplifies the voices of young people in shaping Malaysia\'s future.')">
                     <div class="speaker-avatar" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Dr.%20Sean%20Thum%20(Medical%20Doctor%20%26%20Policy%20Officer,%20Malaysian%20Health%20Coalition).jfif');"></div>
-                    <h4 class="speaker-name">DR. SEAN THUM</h4>
+                    <h4 class="speaker-name">DR. SEAN THUM (he/him)</h4>
                     <p class="speaker-title">Medical Doctor & Policy Officer, Malaysian Health Coalition</p>
                     <p class="speaker-bio">Mental Health Equity Breakout Session</p>
                 </div>
